--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
           <li>FRANQUIADOS</li>
           <li>COLABORADORES</li>
         </ul>
-      <a></a>
+      <a><button>CADASTRE-SE</button></a>
     </header>
 
     <main>
+        <section></section>
+        <section>
         <h2>Nossos Produtos</h2>
         <p>Aqui estão alguns dos nossos hot dogs deliciosos:</p>
         <ul>
@@ -25,6 +27,7 @@
             <li>Hot Dog Especial - R$10,00</li>
         </ul>
         <p>Peça já o seu!</p>
+    </section>
     </main>
 
     <footer>
