--- a/index.html
+++ b/index.html
@@ -1,37 +1,82 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MANÁ | SEU LANCHE DIVINO</title>
-</head>
-<body>
-    <header>
-        <h1>MANÁ</h1>
-        <ul>
-          <li>PRODUTOS</li>
-          <li>FRANQUIADOS</li>
-          <li>COLABORADORES</li>
-        </ul>
-      <a><button>CADASTRE-SE</button></a>
-    </header>
+<html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Maná</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="img/Frame 2.png" type="image/x-icon">
+    </head>
+    <body>
+        <header>
+            <img src="img/LOGO.png" alt="Maná Logo">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Produtos</a>
+                <a href="#">Sobre Nós</a>
+            </nav>
+            <a href="#" class="register">Cadastre-se</a>
+        </header>
+        <div class="main-content">
 
-    <main>
-        <section></section>
-        <section>
-        <h2>Nossos Produtos</h2>
-        <p>Aqui estão alguns dos nossos hot dogs deliciosos:</p>
-        <ul>
-            <li>Hot Dog Simples - R$5,00</li>
-            <li>Hot Dog com Queijo - R$7,00</li>
-            <li>Hot Dog Especial - R$10,00</li>
-        </ul>
-        <p>Peça já o seu!</p>
-    </section>
-    </main>
+            <section class="video-section">
+                <video controls width="100%">
+                    <source src="video.mp4" type="video/mp4">
+                    Seu navegador não suporta a tag de vídeo.
+                </video>
+            </section>
 
-    <footer>
-        <p>&copy; 2024 Hot Dog Store. Todos os direitos reservados.</p>
-    </footer>
-</body>
+            <section class="products">
+                <h2>POPULARES</h2>
+                <div class="tProdutos">
+                    <div class="product">
+                        <img src="img/mana simples.png" alt="Lanche simples">
+                        <div>
+                        <h3>MANÁ SIMPLES</h3>
+                        <p>Pão, 1 salsicha, maionese, katchup, mostarda,
+                            cheddar, purê de batata, vinagrete, milho, ervilha,
+                            batata palha.</p>
+                        <button>peça já o seu</button>
+                    </div>
+                    </div>
+                    <div class="product">
+                        <img src="img/mana feliz.png" alt="Combo infantil">
+                        <div>
+                        <h3>MANÁ FELIZ</h3>
+                        <p>Pão, 1 salsicha, maionese, katchup mostarda, purê de
+                            batata, milho, batata palha + brinquedo
+                            temático.</p>
+                            <button>peça já o seu</button>
+                        </div>
+                    </div>
+                    <a href>
+                        <div class="product">
+                            <img src="img/mana mata sua fome.png" alt="Combo monte o seu">
+                            <div>
+                            <h3>MANÁ MATA SUA FOME</h3>
+                            <p>Monte o seu do jeito que voce quiser com nossos derivados ingredientes (ate 10 ingredientes gratis)</p>
+                            <button>peça já o seu</button>
+                        </div>
+                        </div>
+                    </a>
+                </div>
+            </section>
+            <section class="store-info">
+                <h2>Sobre a Loja</h2>
+                <p>Bem-vindo à Maná Hot Dogs! Nós oferecemos os melhores hot
+                    dogs da cidade.</p>
+            </section>
+        </div>
+        <footer>
+            <ul>
+                <li><a href="#">Políticas de Privacidade</a></li>
+                <li><a href="#">Termos de Serviço</a></li>
+            </ul>
+            <p>Todos os direitos não reservados.</p>
+            <div class="footer-buttons">
+                <button>Torne-se um Colaborador</button>
+                <button>Torne-se um Franquiados</button>
+            </div>
+        </footer>
+    </body>
 </html>
