--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <img src="img/mana simples.png" alt="Lanche simples" loading="lazy">
                     <div>
                         <h3>MANÁ SIMPLES</h3>
-                        <p>Pão, 1 salsicha, maionese, katchup, mostarda,
+                        <p>Pão, salsicha, maionese, katchup, mostarda,
                             cheddar, purê de batata, vinagrete, milho, ervilha,
                             batata palha.</p>
                         <button class="compra">peça já o seu</button>
